2013-07-03  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* fhandler.cc (fhandler_base::close_with_arch): Make sure that the
	archetype is deleted when close_with_arch is referenced *via* the
	archetype.

2013-06-28  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (find_fast_cwd_pointer): Use gas syntax for assembler
	description in all comments.  Make algorithm work on Windows 8.1
	Preview.

2013-06-27  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (child_info_fork::alloc_stack): Fix a comparison to avoid
	taking 4K more stack in forked child.
	* fork.cc (frok::parent): Print child exit code in hex if sync failed.

2013-06-24  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* common.din (rawmemchr): Export.
	* posix.sgml (std-gnu): Add rawmemchr.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2013-06-21  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (cygwin_conv_path): Handle NULL "from" path gracefully.
	* path.sgml (func-cygwin-conv-path): Document returning EINVAL if
	"from" is NULL.

2013-06-19  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* winf.h (av::unshift): Make __reg2.

2013-06-19  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* spawn.cc (child_info_spawn::worker): Eliminate call to newargv.set()
	in favor of conglomerated newargv.setup().  Let newargv.setup() decide
	when to call dup_all().  Only set argc and argv for cygwin processes.
	(av::setup): Rename from av::fixup.  Accept argc and argv parameters.
	Fill out argv and argc here.  Duplicate whole argv structure when this
	is a Cygwin executable.
	* winf.cc (linebuf::fromargv): Don't bother duplicating argv elements
	since they will never be used.
	* winf.h (av::set): Delete.
	(av::setup): Rename from av::fixup.  Add two parameters.
	(av::replace0_maybe): Assign calloced to 1 rather than 'true' for
	clarity.
	(av::dup_maybe): Delete.
	(av::dup_all): Set calloced to show that we have duplicated all of the
	arguments in the list.
